ファイルパスの変更

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="format-detection" content="telephone=no" />
 
     <!-- favicon/webclipicon -->
-    <link rel="icon" href="./assets/img/image-favicon-coffee.png" />
+    <link rel="icon" href="../public/assets/img/image-favicon-coffee.png" />
 
 
     <!-- Google fonts -->
@@ -83,15 +83,15 @@
   
   
         <main class="l-main">
-            <div class="l-top" data-aos="fade " data-aos-duration="1000">
+            <div class="l-top">
   
-                <div class="p-top__picture" data-aos="fade-up" data-aos-duration="1000"></div>
+                <div class="p-top__picture"></div>
     
                 <div class="p-top__messageBox">
-                    <div class="c-top__message-ttl " data-aos="fade-up" data-aos-duration="1000">
+                    <div class="c-top__message-ttl ">
                         Welcomo to  my portfolio
                     </div>
-                    <div class="c-top__message-txt " data-aos="fade-up" data-aos-duration="1000">
+                    <div class="c-top__message-txt ">
                         変化を恐れずに新たな技術を積極的に習得し、<br>
                         自分の付加価値を高めています。
                     </div>
@@ -306,11 +306,11 @@
                         <div class="p-contact__message">下記の「メール」または「Twitter」よりご連絡下さい！</div>
                         <div class="p-contact__items">
                             <div class="p-contact__item">
-                            <a class="p-contact__img" href="mailto:example@example.com" 　rel="noopener noreferrer"><img src="./assets/img/portfolio_gmail.png" alt="" width="80" height="80"></a>
+                            <a class="p-contact__img" href="mailto:example@example.com" 　rel="noopener noreferrer"><img src="../public/assets/img/portfolio_gmail.png" alt="" width="80" height="80"></a>
                             <a class="p-contact__name" href="mailto:example@example.com"　rel="noopener noreferrer">Fuu.web032@gmail.com</a>
                             </div>
                             <div class="p-contact__item">
-                            <a class="p-contact__img" href="https://twitter.com/Fuu_web_"　rel="noopener noreferrer" target="_blank"><img src="./assets/img/portfolio_Twitter3.png" alt="" width="80" height="80"></a>
+                            <a class="p-contact__img" href="https://twitter.com/Fuu_web_"　rel="noopener noreferrer" target="_blank"><img src="../public/assets/img/portfolio_Twitter3.png" alt="" width="80" height="80"></a>
                             <a class="p-contact__name" href="https://twitter.com/Fuu_web_" rel="noopener noreferrer"　target="_blank">@Fuu_web_</a>
                             </div>
                         </div>
