--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
     <div id="js_loading" class="c-loading">
         <div class="c-loading__img">
-            <img src="./assets/img/Fuuki (1).png" alt="" class="c-fadeUp">
+            <img src="../public/assets/img/Fuuki (1).png" alt="" class="c-fadeUp">
         </div>
         </div>
 
@@ -107,7 +107,7 @@
                     <div class="p-about__body--content">
   
                         <div class="p-about-img">
-                            <img src="./assets/img/profile01.PNG" alt="自身の写真です">
+                            <img src="../public/assets/img/profile01.PNG" alt="自身の写真です">
                         </div>
   
                         <div class="p-about__title--content">
@@ -141,10 +141,10 @@
                         <li class="p-service__item">
                             <div class="p-service__item--content">
                                 <div class="p-service__item--img p-img__item">
-                                    <img src="./assets/img/image-html01.png" alt="HTML,CSSの画像" >
+                                    <img src="../public/assets/img/image-html01.png" alt="HTML,CSSの画像" >
                                 </div>
                                 <div class="p-service__item--img--second">
-                                    <img src="./assets/img/image-css01.png" alt="HTML,CSSの画像" >
+                                    <img src="../public/assets/img/image-css01.png" alt="HTML,CSSの画像" >
                                 </div>
                             </div>
                             <h4 class="c-service__item--title">HTML5 & CSS3</h4>
@@ -154,7 +154,7 @@
                         </li>
                         <li class="p-service__item">
                             <div class="p-service__item--img p-img__item--second">
-                                <img src="./assets/img/image-js.png" alt="HTML,CSSの画像" >
+                                <img src="../public/assets/img/image-js.png" alt="HTML,CSSの画像" >
                                 
                             </div>
                             <h4 class="c-service__item--title">JavaScript (jQuery)</h4>
@@ -164,7 +164,7 @@
                         </li>
                         <li class="p-service__item">
                             <div class="p-service__item--img p-img__item--third">
-                                <img src="./assets/img/image-wp01.png" alt="HTML,CSSの画像"　 >
+                                <img src="../public/assets/img/image-wp01.png" alt="HTML,CSSの画像"　 >
                             </div>
                             <h4 class="c-service__item--title">WordPress</h4>
                             <p class="c-service__item--text">
@@ -231,7 +231,7 @@
                     <ul class="p-work__content">
                         <li class="p-work__list">
                                 <div class="p-work__item--img" >
-                                    <img src="./assets/img/portforio002.png" alt="" class="p-work__img--add">
+                                    <img src="../public/assets/img/portforio002.png" alt="" class="p-work__img--add">
                                 </div>
                                 <div class="p-work__list--content">
                                     <p class="c-work__text">
@@ -249,7 +249,7 @@
                         <li class="p-work__list">
                     
                                 <div class="p-work__item--img">
-                                    <img src="./assets/img/pro-opencafe.png">
+                                    <img src="../public/assets/img/pro-opencafe.png">
                                 </div>
                                 <div class="p-work__list--content">
                                     <p class="c-work__text">
@@ -264,7 +264,7 @@
                         </li>
                         <li class="p-work__list">
                                 <div class="p-work__item--img">
-                                    <img src="./assets/img/pro-kadan.png" alt="">
+                                    <img src="../public/assets/img/pro-kadan.png" alt="">
                                 </div>
                                 <div class="p-work__list--content">
                                     <p class="c-work__text">
@@ -279,7 +279,7 @@
                         </li>
                         <li class="p-work__list">
                                 <div class="p-work__item--img">
-                                    <img src="./assets/img/pro-samplecorp.png" alt="">
+                                    <img src="../public/assets/img/pro-samplecorp.png" alt="">
                                 </div>
                                 <div class="p-work__list--content">
                                     <p class="c-work__text">
