--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="format-detection" content="telephone=no" />
 
     <!-- favicon/webclipicon -->
-    <link rel="icon" href="./assets/img/image-favicon-coffee.png" />
+    <link rel="icon" href="./assets/img/image-favicon-coffee.png" src="./assets/img/image-favicon-coffee.png"/>
 
 
     <!-- Google fonts -->
