--- a/public/opencafe.html
+++ b/public/opencafe.html
@@ -12,7 +12,7 @@
         <meta name="format-detection" content="telephone=no" />
     
     <!-- favicon/webclipicon -->
-    <link rel="icon" href="./assets/img/image-favicon-coffee.png" />
+    <link rel="icon" href="./assets/img/image-favicon-coffee.png" type="image/x-icon" />
     
         <!-- Google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
